Update to the new Java HTTP Client